[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aeuc-api"
version = "0.1.0"
description = "FSOU-compliant FastAPI REST interface for the AEUC glyph-registry"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "glyph-registry>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",   # async test client for FastAPI
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Constitutional-Solutions/aeuc-api"
Repository = "https://github.com/Constitutional-Solutions/aeuc-api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
